# abit

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
abit-procs-generator/: Cargo.toml
abit-procs-generator/src/: codegen.rs  filter.rs  main.rs  pdbfile.rs
docs/: getting-started.md  patching-tutorial.md
docs/yarnbox/: opcodes.md  patches.md
procs/: GameVersion.txt  README.md
procs/include/abit/procs/: 00.hpp  01.hpp  02.hpp  03.hpp  04.hpp  05.hpp  06.hpp  07.hpp  08.hpp  09.hpp  0a.hpp  0b.hpp  0c.hpp  0d.hpp  0e.hpp  0f.hpp  10.hpp  11.hpp  12.hpp  13.hpp  14.hpp  15.hpp  16.hpp  17.hpp  18.hpp  19.hpp  1a.hpp  1b.hpp  1c.hpp  1d.hpp  1e.hpp  1f.hpp  20.hpp  21.hpp  22.hpp  23.hpp  24.hpp  25.hpp  26.hpp  27.hpp  (+216 more)
scripts/: build.ps1  buildAndDebug.ps1  buildAndInstallGameMods.ps1  buildAndRun.ps1  regenerateProcs.ps1  setup.ps1
src/abit/: CMakeLists.txt  abit.hpp  config.cpp  config.hpp  config_default.cpp  dll_macros.hpp  env.cpp  env.hpp  error.cpp  error.hpp  fnv.hpp  io.cpp  io.hpp  map.cpp  map.hpp  paths.cpp  paths.hpp  string.cpp  string.hpp  templates.hpp  version.cpp.in  version.hpp  version.hpp.in
src/abit/launcher/: CMakeLists.txt  config.cpp  config_default.cpp  main.cpp  paths.cpp  paths.hpp  process.cpp  process.hpp
src/abit/launcher/assets/: abit.rc
src/abit/loader/: CMakeLists.txt  console.cpp  console.hpp  ensure.hpp  logging.hpp  logging_init.cpp  logging_init.hpp  main.cpp  mod.cpp  mod.hpp  patches.cpp  patches.hpp  proc.hpp  procs.cpp  procs.hpp
src/abit/procs/: .gitignore  CMakeLists.txt  base.hpp  init.cpp  init.hpp  proc.hpp
src/abit/procs/generator/: __main__.py  cpp_code.py  ghidra_output.py
src/abit/ue/: AGameMod.cpp  AGameMod.hpp  CMakeLists.txt  FArchive.hpp  FFrame.hpp  FName.cpp  FName.hpp  FString.cpp  FString.hpp  TArray.hpp  UClass.cpp  UClass.hpp  UField.hpp  UFunction.cpp  UFunction.hpp  UObject.cpp  UObject.hpp  UState.cpp  UState.hpp  UStruct.cpp  UStruct.hpp  cast.hpp  memory.cpp
src/abit/ue/UObject/: fmt.hpp
src/gamemods/PeacefulAndTranquilForever/: Yarnbox.Patches.json  Yarnbox.Patches.lua  modinfo.ini
src/gamemods/PeacefulAndTranquilForever/Classes/: PnTF_Injections.uc  PnTF_Mod.uc
src/gamemods/Shenanigans/: Yarnbox.Patches.json  Yarnbox.Patches.lua  modinfo.ini
src/gamemods/Shenanigans/Classes/: Shenanigans_Injections.uc  Shenanigans_Mod.uc
src/gamemods/YarnboxTesting/: Yarnbox.Patches.json
src/gamemods/YarnboxTesting/Classes/: YbTest_Mod.uc  YbTest_PnTPatch.uc
src/launcher/: config.cpp  config.hpp  config_default.cpp  defer.hpp  main.cpp  paths.cpp  paths.hpp  process.cpp  process.hpp
src/lib/: CMakeLists.txt  ini.c  ini.h
src/lib/minhook/: CMakeLists.txt
src/lib/minhook/src/: trampoline.c
src/lib/sol2/: CMakeLists.txt
src/lib/sol2/include/sol/: config.hpp
src/lib/sol2/lua/: CMakeLists.txt
src/loader/: CMakeLists.txt  console.cpp  detours.cpp  detours.hpp  main.cpp  patches.cpp  patches.hpp  procs.cpp  procs.hpp
src/mods/: CMakeLists.txt
src/mods/example_fourtwenty/: CMakeLists.txt  main.cpp
src/mods/example_helloabit/: CMakeLists.txt  main.cpp
src/mods/example_mod/: CMakeLists.txt  main.cpp
src/mods/yarnbox/: CMakeLists.txt  config.cpp  config.hpp  main.cpp  patch.hpp  patcher.cpp  patcher.hpp  registry.cpp  registry.hpp
src/mods/yarnbox/bytecode/: codegen.cpp  codegen.hpp  disassembler.cpp  disassembler.hpp  dumper.cpp  dumper.hpp  encoding.cpp  encoding.hpp  index.cpp  index.hpp  jumps.cpp  jumps.hpp  opcode.cpp  opcode.hpp  opcodes.md  tree.cpp  tree.hpp
src/mods/yarnbox/config/: bootstrap.cpp  bootstrap.cpp.in  bootstrap.lua  common.hpp  config.cpp  config.hpp  opcode.cpp  opcode.hpp
src/mods/yarnbox/ue/: AGameMod.cpp  AGameMod.hpp  FArchive.hpp  FFrame.hpp  FName.cpp  FName.hpp  FString.cpp  FString.hpp  TArray.hpp  UClass.cpp  UClass.hpp  UField.hpp  UFunction.cpp  UFunction.hpp  UObject.cpp  UObject.hpp  UState.cpp  UState.hpp  UStruct.cpp  UStruct.hpp  cast.hpp  common.hpp  memory.cpp  memory.hpp
src/mods/yarnbox/ue/UObject/: fmt.hpp
src/mods/yarnbox/vm/: opcode.hpp  tracing.cpp  tracing.hpp
