[package]
name = "abit-procs-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
pdb = "0.8.0"
symbolic-common = "10.2.1"
symbolic-demangle = { version = "10.2.1", default-features = false, features = ["msvc"] }
twox-hash = "1.6.3"
